learn-kubernetes-minikube/exemples-network-policies/ex-05-full-stack-example/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: nginx
