learn-kubernetes-minikube/exemples-network-policies/ex-05-full-stack-example/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: byrnedo/alpine-curl
      command: ["sh", "-c", "while true; do sleep 30; done"]
