learn-kubernetes-minikube/exemples-network-policies/ex-05-full-stack-example/allow-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
spec: 
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress: 
    - from: 
      - podSelector:
          matchLabels:
            app: frontend
