learn-kubernetes-minikube/exemples-network-policies/ex-05-full-stack-example/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: deny-all
spec: 
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
